"""
Build Knowledge Action

Handles build_knowledge action including:
- Injecting knowledge graph templates
- Activity tracking
"""
from pathlib import Path
import json
from typing import Dict, Any
from agile_bot.bots.base_bot.src.utils import find_behavior_folder
from agile_bot.bots.base_bot.src.actions.activity_tracker import ActivityTracker

# Note: All file reads in this module use UTF-8 encoding for Windows compatibility


class BuildKnowledgeAction:
    """Build Knowledge action implementation."""
    
    def __init__(self, bot_name: str, behavior: str, workspace_root: Path):
        self.bot_name = bot_name
        self.behavior = behavior
        self.workspace_root = Path(workspace_root)
        self.tracker = ActivityTracker(workspace_root)
    
    def inject_knowledge_graph_template(self) -> Dict[str, Any]:
        """Inject knowledge graph template path into instructions.
        
        Returns:
            Instructions with template path
            
        Raises:
            FileNotFoundError: If template not found
        """
        # Find behavior folder (handles numbered prefixes)
        behavior_folder = find_behavior_folder(
            self.workspace_root,
            self.bot_name,
            self.behavior
        )
        kg_dir = behavior_folder / 'content' / 'knowledge_graph'
        
        if not kg_dir.exists():
            raise FileNotFoundError(
                f'Knowledge graph template not found at {kg_dir}'
            )
        
        # Find any JSON template in the directory
        templates = list(kg_dir.glob('*.json'))
        if not templates:
            raise FileNotFoundError(
                f'Knowledge graph template not found in {kg_dir}'
            )
        
        template_path = templates[0]
        
        return {
            'knowledge_graph_template': str(template_path)
        }
    
    def track_activity_on_start(self):
        """Track activity when action starts."""
        self.tracker.track_start(self.bot_name, self.behavior, 'build_knowledge')
    
    def track_activity_on_completion(self, outputs: dict = None, duration: int = None):
        """Track activity when action completes."""
        self.tracker.track_completion(self.bot_name, self.behavior, 'build_knowledge', outputs, duration)
    
    def finalize_and_transition(self):
        """Finalize action and return next action."""
        class TransitionResult:
            next_action = 'render_output'
        return TransitionResult()
    
    def save_state_on_completion(self):
        """Save workflow state on completion."""
        state_file = self.workspace_root / 'project_area' / 'workflow_state.json'
        state_file.parent.mkdir(parents=True, exist_ok=True)
        state = json.loads(state_file.read_text(encoding='utf-8')) if state_file.exists() else {}
        
        if 'completed_actions' not in state:
            state['completed_actions'] = []
        
        state['completed_actions'].append({
            'action_state': f'{self.bot_name}.{self.behavior}.build_knowledge',
            'timestamp': '2025-12-04T10:00:00Z'
        })
        
        state_file.write_text(json.dumps(state), encoding='utf-8')



